--- a/test4.html
+++ b/test4.html
@@ -8,11 +8,32 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello world with tailwind</h1>
-    <h2>Hello world with tailwind</h2>
+    <!-- <h1>Hello world with tailwind</h1>
+    <h2>Hello world with tailwind</h2> -->
 
-    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-        My button
-    </button>
+    <div class="container mx-auto">
+        
+            <button class="bg-blue-500 sm:bg-orange-400 lg:bg-green-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                My button
+            </button>
+        
+            <h1>Esto es un H1</h1>
+            <h2>Esto es un H2</h2>
+            <h3>Esto es un H3</h3>
+            <h4>Esto es un H4</h4>
+            <h5>Esto es un H5</h5>
+            <h6>Esto es un H6</h6>
+
+            <div class="m-5 mt-10 p-5 pr-10 border">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, veritatis atque! Exercitationem porro molestiae fugiat optio dolorem sapiente esse, voluptatem itaque neque ipsam? Voluptate repellendus alias eum? Voluptas, dolorem quisquam.
+
+                </p>
+            </div>
+
+    </div>
+
+
+
 </body>
 </html>
