--- a/test4.html
+++ b/test4.html
@@ -25,7 +25,7 @@
             <h6>Esto es un H6</h6>
 
             <div class="m-5 mt-10 p-5 pr-10 border">
-                <p>
+                <p class="text-xl sm:text-xs">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, veritatis atque! Exercitationem porro molestiae fugiat optio dolorem sapiente esse, voluptatem itaque neque ipsam? Voluptate repellendus alias eum? Voluptas, dolorem quisquam.
 
                 </p>
