--- a/test4.html
+++ b/test4.html
@@ -11,13 +11,13 @@
     <!-- <h1>Hello world with tailwind</h1>
     <h2>Hello world with tailwind</h2> -->
 
-    <div class="container mx-auto">
+    <div class="container mx-auto mt-5">
         
             <button class="bg-blue-500 sm:bg-orange-400 lg:bg-green-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 My button
             </button>
         
-            <h1>Esto es un H1</h1>
+            <h1 class="mt-5 text-green-500 text-5xl">Esto es un H1</h1>
             <h2>Esto es un H2</h2>
             <h3>Esto es un H3</h3>
             <h4>Esto es un H4</h4>
