--- a/test4.html
+++ b/test4.html
@@ -17,15 +17,15 @@
                 My button
             </button>
         
-            <h1 class="mt-5 text-green-500 text-5xl">Esto es un H1</h1>
-            <h2>Esto es un H2</h2>
-            <h3>Esto es un H3</h3>
+            <h1 class="mt-5 text-green-500 text-5xl text-center">Esto es un H1</h1>
+            <h2 class="text-right">Esto es un H2</h2>
+            <h3 class="uppercase">Esto es un H3</h3>
             <h4>Esto es un H4</h4>
             <h5>Esto es un H5</h5>
             <h6>Esto es un H6</h6>
 
             <div class="m-5 mt-10 p-5 pr-10 border">
-                <p class="text-xl sm:text-xs">
+                <p class="text-xl sm:text-xs text-right">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, veritatis atque! Exercitationem porro molestiae fugiat optio dolorem sapiente esse, voluptatem itaque neque ipsam? Voluptate repellendus alias eum? Voluptas, dolorem quisquam.
 
                 </p>
