--- a/test4.html
+++ b/test4.html
@@ -20,7 +20,7 @@
             <h1 class="mt-5 text-green-500 text-5xl text-center">Esto es un H1</h1>
             <h2 class="text-right">Esto es un H2</h2>
             <h3 class="uppercase">Esto es un H3</h3>
-            <h4>Esto es un H4</h4>
+            <h4 class="bg-pink-500 text-white text-center py-10 px-5 m-10">Esto es un H4</h4>
             <h5>Esto es un H5</h5>
             <h6>Esto es un H6</h6>
 
