--- a/test4.html
+++ b/test4.html
@@ -21,7 +21,7 @@
             <h2 class="text-right">Esto es un H2</h2>
             <h3 class="uppercase">Esto es un H3</h3>
             <h4 class="w-48 bg-pink-500 text-white text-center py-10 px-5 m-10 rounded-lg text-xl">Esto es un H4</h4>
-            <h5>Esto es un H5</h5>
+            <h5 class="shadow-md">Esto es un H5</h5>
             <h6>Esto es un H6</h6>
 
             <div class="m-5 mt-10 p-5 pr-10 border">
