T18 - grid template columns

--- a/test4.html
+++ b/test4.html
@@ -33,7 +33,28 @@
 
     </div>
 
+    <div class="max-w-sm rounded overflow-hidden shadow-lg content-start">
+        <img class="w-full" src="img/bg.jpg" alt="fondo">
+        <div class="px-6 py-4">
+            <div class="font-bold text-xl mb-2"> My card </div>
+            <p class="text-gray-700 text-base">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, nemo! Iste veniam, non enim reprehenderit aliquid commodi est. Obcaecati porro architecto ab excepturi iure, incidunt possimus distinctio tempore asperiores magni.
+            </p>
+            
+        </div>
+        <div class="px-6 py-4">
+            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm "></span>
 
+        </div>
+    </div>
+
+    <div class="h-56 grid grid-cols-3 gap-4 content-start ...">
+        <div>01</div>
+        <div>02</div>
+        <div>03</div>
+        <div>04</div>
+        <div>05</div>
+      </div>
 
 </body>
 </html>
