--- a/test5.html
+++ b/test5.html
@@ -18,6 +18,15 @@
         <div class="bg-green-900">F</div>
     </div>
 
+    <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 my-4">
+        <div class="bg-blue-400">A</div>
+        <div class="bg-blue-500">B</div>
+        <div class="bg-blue-600">C</div>
+        <div class="bg-blue-700">D</div>
+        <div class="bg-blue-800">E</div>
+        <div class="bg-blue-900">F</div>
+    </div>
+
 
     </div>
     
