T21 - grid column span

--- a/test5.html
+++ b/test5.html
@@ -9,23 +9,53 @@
 </head>
 <body>
 
-    <div class="grid grid-cols-3 gap-4 my-4">
-        <div class="bg-green-400">A</div>
-        <div class="bg-green-500">B</div>
-        <div class="bg-green-600">C</div>
-        <div class="bg-green-700">D</div>
-        <div class="bg-green-800">E</div>
-        <div class="bg-green-900">F</div>
-    </div>
+    <div class="container mx-auto mt-5">
 
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 my-4">
-        <div class="bg-blue-400">A</div>
-        <div class="bg-blue-500">B</div>
-        <div class="bg-blue-600">C</div>
-        <div class="bg-blue-700">D</div>
-        <div class="bg-blue-800">E</div>
-        <div class="bg-blue-900">F</div>
-    </div>
+        <div class="grid grid-cols-3 gap-4 my-4">
+            <div class="bg-green-400">A</div>
+            <div class="bg-green-500">B</div>
+            <div class="bg-green-600">C</div>
+            <div class="bg-green-700">D</div>
+            <div class="bg-green-800">E</div>
+            <div class="bg-green-900">F</div>
+        </div>
+
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 my-4">
+            <div class="bg-blue-400">A</div>
+            <div class="bg-blue-500">B</div>
+            <div class="bg-blue-600">C</div>
+            <div class="bg-blue-700">D</div> 
+        </div>
+
+        <div class="grid grid-cols-4 gap-4 my-2">
+            <div class="bg-pink-400 col-span-2 text-center text-white">Yo ocupo 2 espacios de una columna!</div>
+            <div class="bg-pink-500 text-center text-white">B</div>
+            <div class="bg-pink-600 text-center text-white">C</div>
+            <div class="bg-pink-700 col-span-4 text-center text-white">Yo ocupo 4 columnas que son el maximo de mi div!</div> 
+        </div>
+
+        <hr>
+
+        <div class="grid grid-cols-12 gap-4 my-2">
+            <div class="bg-orange-500 ">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+            <div class="bg-orange-500">A</div>
+        </div>
+
+        <div class="grid grid-cols-12 gap-4 ">
+            <div class="bg-orange-500 col-span-4">A</div>
+            <div class="bg-orange-500 col-span-4">A</div>
+            <div class="bg-orange-500 col-span-4">A</div> 
+        </div>
 
 
     </div>
