T22 - Grid column start/end

--- a/test5.html
+++ b/test5.html
@@ -58,6 +58,16 @@
         </div>
 
 
+        <div class="grid grid-cols-4 gap-4 my-2">
+            <div class="bg-pink-500 col-start-2">Yo empiezo en la posicion de la columna 2!</div>
+            <div class="bg-pink-500 col-end-5">Yo termino en la posicion 5</div>
+            <div class="bg-pink-500">A</div> 
+            <div class="bg-pink-500">A</div> 
+        </div>
+
+
+
+
     </div>
     
 </body>
