--- a/test5.html
+++ b/test5.html
@@ -66,7 +66,16 @@
         </div>
 
 
+        <hr>
 
+
+        <div class="grid grid-rows-4 gap-4">
+                <div class="bg-orange-400 row-span-2">Yo ocupo el espacio de 2 filas</div>
+                <div class="bg-orange-400">A</div>
+                <div class="bg-orange-400">A</div>
+                <div class="bg-orange-400">A</div>
+                <div class="bg-orange-400">A</div>
+        </div>
 
     </div>
     
