T24 - mix rows columns

--- a/test5.html
+++ b/test5.html
@@ -77,6 +77,19 @@
                 <div class="bg-orange-400">A</div>
         </div>
 
+        <hr> 
+
+        <div class="grid grid-cols-1 sm:grid-cols-4 grid-rows-5 sm:grid-rows-2 gap-4">
+            <div class="bg-blue-400">d</div>
+            <div class="bg-blue-400">d</div>
+            <div class="bg-blue-400 col-span-1 sm:col-span-2 row-span-1 sm:row-span-2">Yo ocupo 2 columnas y 2 filas!</div>
+            <div class="bg-blue-400">d</div>
+            <div class="bg-blue-400">d</div>
+        </div>
+
+
+
+
     </div>
     
 </body>
